# artificial-neural-network

./: .gitlab-ci.yml  .gitmodules  ArtificialNeuralNetwork.sln  CMakeLists.txt  CopyHelper.txt  README.md  artificial-neural-network.sln
ArtificialNeuralNetwork/: ArtificialNeuralNetwork.vcxproj  ArtificialNeuralNetwork.vcxproj.filters  ArtificialNeuralNetworkMain.cpp
ArtificialNeuralNetwork/include/: MultiLayerPerceptron.h  NodeMLP.h
ArtificialNeuralNetwork/include/Networks/: binary_or.h  students_mark.h
ArtificialNeuralNetwork/src/: MultiLayerPerceptron.cpp  NodeMLP.cpp  activation_functions.cpp
ArtificialNeuralNetwork/src/Networks/: main_network.cpp
ArtificialNeuralNetwork/test/unit/ArtificialNeuralNetworkUnitTest/: ArtificialNeuralNetworkUnitTest.vcxproj  ArtificialNeuralNetworkUnitTest.vcxproj.filters
artificial-neural-network/: .cproject  .project  CMakeLists.txt  artificial-neural-network.cpp  artificial-neural-network.vcxproj  artificial-neural-network.vcxproj.filters  project-settings-cross.xml  project-settings.xml
artificial-neural-network/include/: activation-functions.cxx  activation-functions.hpp  derivatives-activation-functions.cxx  derivatives-activation-functions.hpp  derivatives-loss-function.cxx  derivatives-loss-function.hpp  errors-mlp.cxx  errors-mlp.hpp  loss-function.cxx  loss-function.hpp  multilayer-perceptron.cxx  multilayer-perceptron.hpp  node-mlp.cxx  node-mlp.hpp
artificial-neural-network/include/networks/: binary-or.hpp  sample_network.h
artificial-neural-network/src/: artificial-neural-network.cpp  multilayer-perceptron.cpp  node-mlp.cpp
artificial-neural-network/src/networks/: main_network.cpp  zero_classifier.cpp
artificial-neural-network/test/unit/ArtificialNeuralNetworkUnitTest/: ArtificialNeuralNetworkUnitTest.cpp  ArtificialNeuralNetworkUnitTest.vcxproj  ArtificialNeuralNetworkUnitTest.vcxproj.filters
doc/: .gitignore  Doxyfile
include/: activation-functions.hpp  derivatives-activation-functions.hpp  derivatives-loss-function.hpp  errors-mlp.hpp  loss-function.hpp  multilayer-perceptron.hpp  node-mlp.hpp
include/networks/: binary-or.hpp  main_network.hpp  zero_classifier.hpp
src/: artificial-neural-network.cpp  multilayer-perceptron.cpp  node-mlp.cpp
src/networks/: main_network.cpp  zero_classifier.cpp
